# rust-openttd-admin

./: .travis.yml  Cargo.toml  README.md
proptest-regressions/types/: date.txt
src/: consts.rs  date.rs  lib.rs  main.rs
src/network/: admin.rs  mod.rs
src/packet/: admin_client_packets.rs  admin_server_packets.rs  mod.rs  read.rs  write.rs
src/packet/admin/: client_packets.rs  mod.rs  server_packets.rs
src/packet/admin/test/: mod.rs
src/packet/admin_packets/: admin_join.rs  mod.rs
src/packet/serde/: de.rs  error.rs  mod.rs  ser.rs
src/packet/server_packets/: company_info.rs  mod.rs  server_error.rs  server_protocol.rs  server_welcome.rs
src/types/: admin_update_frequency.rs  admin_update_type.rs  date.rs  mod.rs
