[package]
name = "rust-openttd-admin"
version = "0.2.0"
authors = ["Thomas den Hollander <denhollander.thomas@gmail.com>"]
edition = "2018"
description = "A library to receive and parse OpenTTD admin packets."
license = "MIT"

[dependencies]
byteorder = "1"
failure = "0.1.5"
serde="1"
serde_derive = "1"
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1"
bitflags = "1"

[dev-dependencies]
proptest = "1.1.0"
